struct Acceleration {
    let ax: Double
    let ay: Double
}

// MARK: Equatable, Hashable
extension Acceleration: Equatable, Hashable {
}
